# bento4-rs

./: .clangd  Cargo.toml  README.md
.github/workflows/: build.yml  ci.yml
bento4-src/: CHANGELOG.md  Cargo.toml  README.md
mp4decrypt/: CHANGELOG.md  Cargo.toml  README.md
mp4decrypt/src/: lib.rs  mp4decrypt.cpp  mp4decrypt.h
mp4decrypt/tests/: samples.rs
